--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "file-loader": "^6.2.0",
+    "image-minimizer-webpack-plugin": "^2.2.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "mini-css-extract-plugin": "^1.5.0",
     "style-loader": "^2.0.0",
     "stylelint": "^13.13.0",
     "stylelint-config-standard": "^21.0.0",
